# ChatDBG

./: .gitignore  Dockerfile  README.md  check-version-bump.py  functions_list.txt  pyproject.toml
rust-support/: Cargo.toml  fill-crate-version.py
rust-support/chatdbg/: Cargo.toml
rust-support/chatdbg/src/: lib.rs
rust-support/chatdbg_macros/: Cargo.toml
rust-support/chatdbg_macros/src/: lib.rs
samples/bugbench/httpd-2.0.49/srclib/apr-util/: CHANGES  Makefile.in  NWGNUmakefile  aprutil.dsp  apu-config.in  buildconf  config.layout  configure  configure.in  libaprutil.dsp
samples/bugbench/httpd-2.0.49/srclib/apr-util/buckets/: Makefile.in  apr_brigade.c  apr_buckets.c  apr_buckets_alloc.c  apr_buckets_eos.c  apr_buckets_file.c  apr_buckets_flush.c  apr_buckets_heap.c  apr_buckets_mmap.c  apr_buckets_pipe.c  apr_buckets_pool.c  apr_buckets_refcount.c  apr_buckets_simple.c  apr_buckets_socket.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/crypto/: Makefile.in  apr_md4.c  apr_md5.c  apr_sha1.c  getuuid.c  uuid.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/dbm/: Makefile.in  apr_dbm.c  apr_dbm_berkeleydb.c  apr_dbm_gdbm.c  apr_dbm_ndbm.c  apr_dbm_sdbm.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/docs/: doxygen.conf
samples/bugbench/httpd-2.0.49/srclib/apr-util/encoding/: Makefile.in  apr_base64.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/hooks/: Makefile.in  apr_hooks.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/include/: apr_anylock.h  apr_base64.h  apr_buckets.h  apr_date.h  apr_dbm.h  apr_hooks.h  apr_ldap.h.in  apr_ldap.hnw  apr_ldap.hw  apr_ldap_url.h  apr_md4.h  apr_md5.h  apr_optional.h  apr_optional_hooks.h  apr_queue.h  apr_reslist.h  apr_rmm.h  apr_sdbm.h  apr_sha1.h  apr_strmatch.h  apr_uri.h  apr_uuid.h  apr_xlate.h  apr_xml.h  apu.h.in  apu.hnw  apu.hw  apu_compat.h  apu_version.h
samples/bugbench/httpd-2.0.49/srclib/apr-util/ldap/: Makefile.in  apr_ldap_compat.c  apr_ldap_url.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/misc/: Makefile.in  apr_date.c  apr_queue.c  apr_reslist.c  apr_rmm.c  apu_version.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/strmatch/: Makefile.in  apr_strmatch.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/test/: Makefile.in  Makefile.win  test_apu.h  testdbm.c  testmd4.c  testmd5.c  testpass.c  testqueue.c  testreslist.c  testrmm.c  teststrmatch.c  testuri.c  testuuid.c  testxlate.c  testxml.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/uri/: Makefile.in  NWGNUmakefile  apr_uri.c  gen_uri_delims.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/xlate/: Makefile.in  xlate.c
samples/bugbench/httpd-2.0.49/srclib/apr-util/xml/: Makefile.in  NWGNUmakefile  apr_xml.c
samples/bugbench/polymorph-0.4.0/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.in  llist.c  llist.h  mkinstalldirs  polymorph.c  polymorph.h  polymorph_types.h  rcfile.c  rcfile.h
samples/bugbench/ypserv-2.2/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
samples/bugbench/ypserv-2.2/etc/: Makefile.am  Makefile.in  README  locale  netgroup  netgroup.5  netmasks  securenets  timezone  ypserv.conf
samples/bugbench/ypserv-2.2/makedbm/: Makefile.am  Makefile.in  makedbm.8.in  makedbm.c
samples/bugbench/ypserv-2.2/mknetid/: Makefile.am  Makefile.in  mknetid.8.in  mknetid.c  mknetid.h  netid_hash.c
samples/bugbench/ypserv-2.2/revnetgroup/: Makefile.am  Makefile.in  getnetgrent.c  hash.c  hash.h  revnetgroup.8.in  revnetgroup.c
samples/bugbench/ypserv-2.2/rpc.yppasswdd/: Makefile.am  Makefile.in  rpc.yppasswdd.8.in  update.c  yppasswd.h  yppasswd.x  yppasswd_xdr.c  yppasswdd.8.in  yppasswdd.c
samples/bugbench/ypserv-2.2/rpc.ypxfrd/: Makefile.am  Makefile.in  rpc.ypxfrd.8.in  ypxfrd.8.in  ypxfrd.c  ypxfrd.h  ypxfrd_server.c  ypxfrd_svc.c
samples/bugbench/ypserv-2.2/scripts/: Makefile.am  Makefile.in  create_printcap.in  match_printcap.in  pwupdate.8.in  pwupdate.in  ypMakefile.in  ypinit.8.in  ypinit.in  ypxfr_1perday.in  ypxfr_1perhour.in  ypxfr_2perday.in
samples/bugbench/ypserv-2.2/yphelper/: Makefile.am  Makefile.in  yphelper.8  yphelper.c
samples/bugbench/ypserv-2.2/yppush/: Makefile.am  Makefile.in  yppush.8.in  yppush.c
samples/bugbench/ypserv-2.2/ypserv/: Makefile.am  Makefile.in  server.c  ypserv.8.in  ypserv.c  ypserv_xdr.c
samples/bugbench/ypserv-2.2/ypxfr/: Makefile.am  Makefile.in  ypxfr.8.in  ypxfr.c  ypxfr.h  ypxfr_clnt.c  ypxfr_xdr.c
src/chatdbg/: CMakeLists.txt  __imain__.py  __main__.py  appendlines.hpp  build-chatdbg.bat  chatdbg.cpp  chatdbg.py  chatdbg_gdb.py  chatdbg_ipdb.py  chatdbg_lldb.py  chatdbg_pdb.py  chatdbg_utils.py  chatdbg_why.py  clangd_lsp_integration.py  dbg_dialog.py  getmodel.hpp  ipdb_log.py  utils.py
src/chatdbg/assistant/: assistant-old.py  assistant.py  listeners.py  lite_assistant.py  test.py
src/chatdbg/conversation/: __init__.py  functions.py  functions_interface.py  functions_lldb.py
src/chatdbg/custom_pdb/: prompts.py
src/chatdbg/include/: joinstrings.hpp  openai.hpp
src/chatdbg/ipdb_util/: capture.py  chatlog.py  config.py  locals.py  logging.py  printer.py  prompts.py  streamwrap.py  text.py
src/chatdbg/lldb_utils/: chat_history.py  enriched_stack.py  prompts.py
src/chatdbg/native_util/: clangd_lsp_integration.py  code.py  dbg_dialog.py  safety.py  stacks.py
src/chatdbg/old_stuff/: chatdbg_utils.py  gdb_print_test.py  lldb_print_test.py  lldb_why.py  prompts.py
src/chatdbg/pdb/: locals.py  pdb.py  prompts.py  text.py
src/chatdbg/pdb_util/: locals.py  paths.py  sandbox.py  text.py
src/chatdbg/util/: chatlog.py  config.py  exit_message.py  help.py  history.py  instructions.txt  jupyter.py  litellm.py  log.py  markdown.py  module_whitelist.txt  plog.py  printer.py  prompts.py  stream.py  text.py  trim.py  wrap.py
src/chatdbg/util/instructions/: default.txt  gpt-4o.txt  time_travel.txt
src/chatdbg/windbg/: chatdbg.cpp  vcpkg-configuration.json  vcpkg.json
src/chatdbg/windbg/include/: wordwrap.hpp
(+949 files in other folders)
