[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ChatDBG"
version = "0.2.2"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
  { name="Kyla Levin", email="khlevin@umass.edu" },
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
  { name="Stephen Freund", email="stephenfreund@gmail.com" }
]
dependencies = [
  "llm-utils>=0.2.6",
  "openai>=1.6.1",
  "rich>=13.7.0",
  "ansicolors>=1.1.8",
  "traitlets>=5.14.1"
]
description = "AI-assisted debugging. Uses AI to answer 'why'."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.scripts]
chatdbg = "chatdbg.__main__:main"
ichatdbg = "chatdbg.__imain__:main"

[project.urls]
"Homepage" = "https://github.com/plasma-umass/ChatDBG"
"Bug Tracker" = "https://github.com/plasma-umass/ChatDBG/issues"
