[package]
name = "chatdbg"
version = "0.6.5"                                 # Sync with pyproject.toml on release.
edition = "2021"
description = "Rust-specific support for ChatDBG."
authors = ["Emery Berger <emery.berger@gmail.com>"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/plasma-umass/ChatDBG/"
repository = "https://github.com/plasma-umass/ChatDBG/"

[dependencies]
chatdbg_macros = "0.6.5" # Sync with pyproject.toml on release.
lazy_static = "1.4.0"
